# pokemon_weather_companion

./: Dockerfile  Enviroment.py  LICENSE  README.md  create_database.py  helper_functions.py  pokemon_runner.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
client/: package-lock.json
models/: Pokemon.py  PokemonByType.py  PokemonDamageRelation.py  PokemonType.py  PokemonTypeInfo.py
pokemon-weather-companion/: package-lock.json  package.json
src/: Enviroment.py  create_database.py  helper_functions.py  pokemon_loader.py  pokemon_runner.py  server.py  weather_runner.py
src/models/: Damage.py  Pokemon.py  PokemonByType.py  PokemonDamageRelation.py  PokemonInfo.py  PokemonType.py  PokemonTypeInfo.py
tests/: test_helper_functions.py
